# selenium_scrapy

./: README.md  setup.cfg
requirements/: requirements.txt
selenium_scrapy/: http.py  middlewares.py
