[metadata]
name = selenium-scrapy
version = 0.1.0
url = https://github.com/mrafee113/selenium_scrapy
description = Scrapy with selenium==4.3
long_description = file:README.md

[options]
packages = find:
install_requires =
    Scrapy==2.6.1
    validators==0.20.0
    pyselenium_localstorage @ git+https://github.com/mrafee113/pyselenium_localstorage.git@v0.1.0
zip_safe = True
include_package_data = True

[pep8]
max-line-length = 100

[options.package_data]
* = README.md
