[metadata]
name = selenium-scrapy
version = 0.1.2
url = https://github.com/mrafee113/selenium_scrapy
description = Scrapy with selenium==4.3
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    Scrapy==2.6.1
    validators==0.20.0
    pyselenium-localstorage==0.1.1
zip_safe = True
include_package_data = True

[options.package_data]
* = README.md
